<resources>
    <string name="app_name">fatec_ipi_noite_chat_com_firebase</string>
    <string name="dica_login">Digite seu login</string>
    <string name="dica_senha">Digite sua senha</string>
    <string name="quero_me_cadastrar">Quero me cadastrar</string>
    <string name="mensagem">Em %s, %s diz:</string>
    <string name="digite_sua_mensagem">Digite a sua mensagem</string>
    <string name="cadastro_sucesso">Cadastro realizado com sucesso</string>
    <string name="cadastro_falha">Erro no cadastro</string>
    <string name="login_falhou">Login falhou</string>
    <string name="login_sucesso">login com sucesso</string>
    <string name="fatec_ipiranga">Fatec Ipiranga</string>
    <string name="chat_e_bate_papo">Chat e Bate Papo</string>
    <string name="welcome">Bem-vindo ao chat</string>
    <string name="login">Faça o login para continuar</string>
    <string name="signup">Crie sua conta</string>
    <string name="menu_title">Chat e bate papo</string>
    <string name="menu_subtitle">Qual seu interesse?</string>
    <string name="novidades">Novidades</string>
    <string name="cinema">Cinema</string>
    <string name="tecnologia">Tecnologia</string>
    <string name="economia">Economia</string>
</resources>
